# template-python-project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.md  README.md  environment.yaml  environment.yml  pyproject.toml  setup.cfg  tox-torch.ini  tox.ini
.github/workflows/: test.yml
src/project/: add.py
src/squarer/: __init__.py  __version__.py
src/squarer/cli/: __init__.py  entrypoint.py
src/squarer/maths/: __init__.py  calc.py
src/squarer/mymath/: __init__.py
test/: conftest.py
test/test_add/: test_add.py
test/test_cli/: test_entrypoint.py
test/test_main/: test_main.py
test/test_math/: test_square.py
test/test_mymath/: test_square.py
