[project]
name = "project"
description = "Test project"
readme = "README.rst"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = [
  "large: Marks tests for large molecules, this can be slow.",
]