[metadata]
name = squarer
version = attr: squarer.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marvin Friede"
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    squarer = squarer:main

[options.extras_require]
dev =
    black
    codecov
    pre-commit
    pylint
    pytest
    pytest-cov
    tox
