[metadata]
name = squarer
version = attr: squarer.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marvin Friede"
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    test*
    docs*
    examples*

[options.entry_points]
console_scripts =
    squarer = squarer.cli:console_entry_point

[options.extras_require]
dev =
    black
    codecov
    covdefaults
    coverage
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
squarer =
    py.typed
