[metadata]
name = squarer
version = attr: squarer.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Marvin Friede"
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    squarer = squarer:console_entry_point

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
squarer =
    py.typed
